change css files

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </svg>
 
         </button>
-        <a class="logo" href="http://localhost:63342/singlolo/">
+        <a class="logo" href="#">
             <img class="logo__component" src="./images/logo.png" alt="logo">
         </a>
         <nav class="header-nav">
