--- a/index.html
+++ b/index.html
@@ -234,77 +234,79 @@
         </section>
         <div class="sheet burger-disabled"></div>
         <div class="sidebar burger-disabled">
-          <div class="sidebar-header">
-            <button class="sidebar-button">
-              <svg
-                width="25"
-                height="20"
-                viewBox="0 0 25 20"
-                fill="pink"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                  d="M0 1.2C0 0.537259 0.537259 0 1.2 0H23.8C24.4627 0 25 0.537259 25 1.2C25 1.86274 24.4627 2.4 23.8 2.4H1.2C0.537259 2.4 0 1.86274 0 1.2ZM0 10C0 9.33726 0.537259 8.8 1.2 8.8H23.8C24.4627 8.8 25 9.33726 25 10C25 10.6627 24.4627 11.2 23.8 11.2H1.2C0.537259 11.2 0 10.6627 0 10ZM1.2 17.6C0.53726 17.6 0 18.1373 0 18.8C0 19.4627 0.537259 20 1.2 20H23.8C24.4627 20 25 19.4627 25 18.8C25 18.1373 24.4627 17.6 23.8 17.6H1.2Z"
+          <div class="sidebar-menu">
+            <div class="sidebar-header">
+              <button class="sidebar-button">
+                <svg
+                  width="25"
+                  height="20"
+                  viewBox="0 0 25 20"
                   fill="pink"
-                />
-              </svg>
-            </button>
-            <div class="sidebar-logo"></div>
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                    d="M0 1.2C0 0.537259 0.537259 0 1.2 0H23.8C24.4627 0 25 0.537259 25 1.2C25 1.86274 24.4627 2.4 23.8 2.4H1.2C0.537259 2.4 0 1.86274 0 1.2ZM0 10C0 9.33726 0.537259 8.8 1.2 8.8H23.8C24.4627 8.8 25 9.33726 25 10C25 10.6627 24.4627 11.2 23.8 11.2H1.2C0.537259 11.2 0 10.6627 0 10ZM1.2 17.6C0.53726 17.6 0 18.1373 0 18.8C0 19.4627 0.537259 20 1.2 20H23.8C24.4627 20 25 19.4627 25 18.8C25 18.1373 24.4627 17.6 23.8 17.6H1.2Z"
+                    fill="pink"
+                  />
+                </svg>
+              </button>
+              <div class="sidebar-logo"></div>
+            </div>
+            <nav class="sidebar-nav">
+              <ul class="header-nav-list sidebar-nav-list">
+                <li class="sidebar-nav-list__component">
+                  <a
+                    class="header-nav-list__component-link sidebar-nav-list__component-link"
+                    href="#"
+                  >
+                    HOME
+                  </a>
+                </li>
+                <li
+                  class="sidebar-nav-list__component sidebar-nav-list__component-margin"
+                >
+                  <a
+                    class="header-nav-list__component-link sidebar-nav-list__component-link"
+                    href="#"
+                  >
+                    SERVICES
+                  </a>
+                </li>
+                <li
+                  class="sidebar-nav-list__component sidebar-nav-list__component-margin"
+                >
+                  <a
+                    class="header-nav-list__component-link sidebar-nav-list__component-link"
+                    href="#"
+                  >
+                    PORTFOLIO
+                  </a>
+                </li>
+                <li
+                  class="sidebar-nav-list__component sidebar-nav-list__component-margin"
+                >
+                  <a
+                    class="header-nav-list__component-link sidebar-nav-list__component-link"
+                    href="#"
+                  >
+                    ABOUT
+                  </a>
+                </li>
+                <li
+                  class="sidebar-nav-list__component sidebar-nav-list__component-margin"
+                >
+                  <a
+                    class="header-nav-list__component-link sidebar-nav-list__component-link"
+                    href="#"
+                  >
+                    CONTACT
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
-          <nav class="sidebar-nav">
-            <ul class="header-nav-list sidebar-nav-list">
-              <li class="sidebar-nav-list__component">
-                <a
-                  class="header-nav-list__component-link sidebar-nav-list__component-link"
-                  href="#"
-                >
-                  HOME
-                </a>
-              </li>
-              <li
-                class="sidebar-nav-list__component sidebar-nav-list__component-margin"
-              >
-                <a
-                  class="header-nav-list__component-link sidebar-nav-list__component-link"
-                  href="#"
-                >
-                  SERVICES
-                </a>
-              </li>
-              <li
-                class="sidebar-nav-list__component sidebar-nav-list__component-margin"
-              >
-                <a
-                  class="header-nav-list__component-link sidebar-nav-list__component-link"
-                  href="#"
-                >
-                  PORTFOLIO
-                </a>
-              </li>
-              <li
-                class="sidebar-nav-list__component sidebar-nav-list__component-margin"
-              >
-                <a
-                  class="header-nav-list__component-link sidebar-nav-list__component-link"
-                  href="#"
-                >
-                  ABOUT
-                </a>
-              </li>
-              <li
-                class="sidebar-nav-list__component sidebar-nav-list__component-margin"
-              >
-                <a
-                  class="header-nav-list__component-link sidebar-nav-list__component-link"
-                  href="#"
-                >
-                  CONTACT
-                </a>
-              </li>
-            </ul>
-          </nav>
         </div>
       </main>
       <footer class="footer wrapper" id="contacts">
